<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Coquitlam Chrysler Dodge</string>
    <string name="title_activity_dealsfragemnet">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_inventory">InventoryActivity</string>
    <string name="title_activity_team">TeamActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_first">Coquitlam Chrysler Dodge</string>
    <string name="title_activity_social">SocialActivity</string>
    <string name="title_activity_social_">Social_Activity</string>
    <string name="title_activity_sociall">SociallActivity</string>
    <string name="title_activity_activity_social">ActivitySocial</string>
    <string name="title_activity_mainn">MainnActivity</string>
    <string name="title_activity_addf">Addf</string>
    <string name="title_activity_sample">Sample</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="title_activity_facebook_login">FacebookLogin</string>
    <string name="button9">9</string>
    <string name="buttonAdd">+</string>
    <string name="buttonSubtract">-</string>
    <string name="buttonMultiply">*</string>
    <string name="buttonDivide">/</string>
    <string name="buttonToggleSign">+/-</string>
    <string name="buttonDecimalPoint">.</string>
    <string name="buttonEquals">=</string>
    <string name="buttonClear">C</string>
    <string name="buttonClearMemory">MC</string>
    <string name="buttonAddToMemory">M+</string>
    <string name="buttonSubtractFromMemory">M-</string>
    <string name="buttonRecallMemory">MR</string>
    <string name="buttonSquareRoot">√</string>
    <string name="buttonSquared">x²</string>
    <string name="buttonInvert">1/x</string>
    <string name="buttonSine">sin</string>
    <string name="buttonCosine">cos</string>
    <string name="buttonTangent">tan</string>
    <string name="tab_car">CarDeatails</string>
    <string name="tab_gallery">Gallery</string>
    <string name="title_activity_cardetail">CardetailActivity</string>
    <string name="appid">1545745925673582</string>
    <string name="textdeal">This give you the opportunity to showcase the best deals promotions and special events for each department.</string>
    <string name="service_request">Click Here For Service Request</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_google_plus">GooglePlusActivity</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="signupTitle">Sign in with your account</string>
    <string name="accountInfoTitle">If you are a new number or want to edit current info tab fields then save</string>
    <string name="galleryLine">Tap an image or rotate to view full screen</string>
    <string name="textForgetPassword">forgot your password?</string>
    <string name="title_activity_garage_detail">GarageDetailActivity</string>
    <string name="title_activity_garage_gallery">GarageGalleryActivity</string>
    <string name="title_accountinfo">Account info</string>
    <string name="title_cardealsdetail">Car Deal Details</string>
    <string name="title_Signin">Sign In</string>
    <string name="title_GarageDetail">Garage Details</string>
    <string name="title_Calculator">Calculator</string>
    <string name="title_Dealerinfo">Dealer info</string>
    <string name="title_Deals">Deals</string>
    <string name="title_flasglight">Flashlight</string>
    <string name="title_inventorysearch">Inventory Search</string>
    <string name="title_news">News</string>
    <string name="title_service">Services</string>
    <string name="title_servicerequest">Service Request</string>
    <string name="title_tools">Tools</string>
    <string name="crash_string">Crashed!, don\'t worry email will be sent, click on send email when prompted</string>

    //Data not available text
    <string name="for_deals">No deals for now</string>
    <string name="for_vehicleinfo">If You Recently purchased a car from \"Coquitlam Chrysler Dodge\" or just downloaded this application,contact customer service to setup this screen..</string>
    <string name="for_favourites">Make a Car or Deal favourite to see your favourite deal hear.</string>
    <string name="for_roadassistance">No Road Assistants at this moment</string>
    <string name="for_inventories">No Inventories at this moment</string>
    <string name="for_news">No News at this moment</string>
    <string name="for_maintenance">No Maintenance detail yet.</string>
</resources>