<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/functionPad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#f2f2f2"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/linearAccountInfo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height"
        android:layout_below="@+id/relative_shadow"
        android:background="@color/black"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewAccountInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Calculator"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="0.13" >

        <TextView
            android:id="@+id/edittext_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/black"
            android:gravity="right|center_vertical"
            android:maxLines="1"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
             />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".10" >

        <Button
            android:id="@+id/buttonClearMemory"
            android:layout_width="@dimen/closebtn"
            android:layout_height="@dimen/closebtn"
            android:layout_margin="6dp"
            android:layout_weight=".25"
            android:background="@drawable/hover_button"
            android:text="@string/buttonClearMemory"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/buttonAddToMemory"
            android:layout_width="@dimen/closebtn"
            android:layout_height="@dimen/closebtn"
            android:layout_margin="6dp"
            android:layout_weight=".25"
            android:background="@drawable/hover_button"
            android:text="@string/buttonAddToMemory"
            android:textColor="@color/black"
           android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/buttonSubtractFromMemory"
            android:layout_width="@dimen/closebtn"
            android:layout_height="@dimen/closebtn"
            android:layout_margin="6dp"
            android:layout_weight=".25"
            android:background="@drawable/hover_button"
            android:text="@string/buttonSubtractFromMemory"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/buttonRecallMemory"
            android:layout_width="@dimen/closebtn"
            android:layout_height="@dimen/closebtn"
            android:layout_margin="6dp"
            android:layout_weight=".25"
            android:background="@drawable/hover_button"
            android:text="@string/buttonRecallMemory"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".10" >

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="@dimen/closebtn"
            android:layout_height="@dimen/closebtn"
            android:layout_margin="6dp"
            android:layout_weight=".25"
            android:background="@drawable/hover_button"
            android:text="@string/buttonClear"
            android:textColor="@color/black"
           android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/buttonToggleSign"
            android:layout_width="@dimen/closebtn"
            android:layout_height="@dimen/closebtn"
            android:layout_margin="6dp"
            android:layout_weight=".25"
            android:background="@drawable/hover_button"
            android:text="@string/buttonToggleSign"
            android:textColor="@color/black"
           android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="@dimen/closebtn"
            android:layout_height="@dimen/closebtn"
            android:layout_margin="6dp"
            android:layout_weight=".25"
            android:background="@drawable/hover_button"
            android:text="@string/buttonDivide"
            android:textColor="@color/black"
          android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="@dimen/closebtn"
            android:layout_height="@dimen/closebtn"
            android:layout_margin="6dp"
            android:layout_weight=".25"
            android:background="@drawable/hover_button"
            android:text="@string/buttonMultiply"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".10" >

        <Button
            android:id="@+id/button7"
            android:layout_width="@dimen/closebtn"
            android:layout_height="@dimen/closebtn"
            android:layout_margin="6dp"
            android:layout_weight=".25"
            android:background="@drawable/hover_button"
            android:text="@string/button7"
            android:textColor="@color/black"
           android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button8"
            android:layout_width="@dimen/closebtn"
            android:layout_height="@dimen/closebtn"
            android:layout_margin="6dp"
            android:layout_weight=".25"
            android:background="@drawable/hover_button"
            android:text="@string/button8"
            android:textColor="@color/black"
           android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button9"
            android:layout_width="@dimen/closebtn"
            android:layout_height="@dimen/closebtn"
            android:layout_margin="6dp"
            android:layout_weight=".25"
            android:background="@drawable/hover_button"
            android:text="@string/button9"
            android:textColor="@color/black"
           android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/buttonSubtract"
            android:layout_width="@dimen/closebtn"
            android:layout_height="@dimen/closebtn"
            android:layout_margin="6dp"
            android:layout_weight=".25"
            android:background="@drawable/hover_button"
            android:text="@string/buttonSubtract"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".10" >

        <Button
            android:id="@+id/button4"
            android:layout_width="@dimen/closebtn"
            android:layout_height="@dimen/closebtn"
            android:layout_margin="6dp"
            android:layout_weight=".25"
            android:background="@drawable/hover_button"
            android:text="@string/button4"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="@dimen/closebtn"
            android:layout_height="@dimen/closebtn"
            android:layout_margin="6dp"
            android:layout_weight=".25"
            android:background="@drawable/hover_button"
            android:text="@string/button5"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button6"
            android:layout_width="@dimen/closebtn"
            android:layout_height="@dimen/closebtn"
            android:layout_margin="6dp"
            android:layout_weight=".25"
            android:background="@drawable/hover_button"
            android:text="@string/button6"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="@dimen/closebtn"
            android:layout_height="@dimen/closebtn"
            android:layout_margin="6dp"
            android:layout_weight=".25"
            android:background="@drawable/hover_button"
            android:text="@string/buttonAdd"
            android:textColor="@color/black"
           android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".20"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".75"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".25"
                android:textSize="25sp" >

                <Button
                    android:id="@+id/button1"
                    android:layout_width="@dimen/closebtn"
                    android:layout_height="@dimen/closebtn"
                    android:layout_margin="6dp"
                    android:layout_weight=".33"
                    android:background="@drawable/hover_button"
                    android:text="@string/button1"
                    android:textColor="@color/black"
                   android:textAppearance="?android:attr/textAppearanceMedium"/>

                <Button
                    android:id="@+id/button2"
                    android:layout_width="@dimen/closebtn"
                    android:layout_height="@dimen/closebtn"
                    android:layout_margin="6dp"
                    android:layout_weight=".33"
                    android:background="@drawable/hover_button"
                    android:text="@string/button2"
                    android:textColor="@color/black"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="@dimen/closebtn"
                    android:layout_height="@dimen/closebtn"
                    android:layout_margin="6dp"
                    android:layout_weight=".34"
                    android:background="@drawable/hover_button"
                    android:text="@string/button3"
                    android:textColor="@color/black"
                   android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".25" >

                <Button
                    android:id="@+id/button0"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/closebtn"
                    android:layout_margin="6dp"
                    android:layout_weight=".66"
                    android:background="@drawable/hover_button"
                    android:text="@string/button0"
                    android:textColor="@color/black"
                   android:textAppearance="?android:attr/textAppearanceMedium"/>

                <Button
                    android:id="@+id/buttonDecimalPoint"
                    android:layout_width="@dimen/closebtn"
                    android:layout_height="@dimen/closebtn"
                    android:layout_margin="6dp"
                    android:layout_weight=".34"
                    android:background="@drawable/hover_button"
                    android:text="@string/buttonDecimalPoint"
                    android:textColor="@color/black"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/buttonEquals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:layout_weight=".22"
            android:background="@drawable/hover_button"
            android:text="@string/buttonEquals"
            android:textColor="@color/black"
           android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</LinearLayout>